# oof

./: .bzrignore  .gitignore  LICENSE  PLAN.org  README.md
astromap/: .cvsignore  AUTHORS  BUGS  ChangeLog  Makefile.am  NEWS  README  acinclude.m4  astromap.pc.in  configure.ac
astromap/doc/: Doxyfile  Doxyfile.in
astromap/plot/: .cvsignore  AUTHORS  Makefile.am  README  acinclude.m4  configure.ac  phelpers.cxx  phelpers.hxx  plot.cxx  plot.hxx  pyplot.i
astromap/plot/colmaps/: Makefile.am  heat.lasc  perceived.lasc
astromap/plot/config/: swig.am
astromap/plot/py/: Makefile.am  implot.py
astromap/plot/test/: mapdseval.py
astromap/src/: Makefile.am  astromap.cxx  astromap.hxx  astromap_err.cxx  astromap_err.hxx  astromap_fwd.hxx  astromapio.cxx  astromapio.hxx  convolve.cxx  convolve.hxx  corrgaussnoise.cxx  corrgaussnoise.hxx  fft.cxx  fft.hxx  fitting_basic.cxx  fitting_basic.hxx  fresneltrans.cxx  fresneltrans.hxx  lcmaps.cxx  lcmaps.hxx  mapops.cxx  mapops.hxx  mapregions.cxx  mapregions.hxx  mapset.cxx  mapset.hxx  mapstructure.cxx  mapstructure.hxx  pixalgo.cxx  pixalgo.hxx  pixextract.cxx  pixextract.hxx  pixiterators.cxx  pixiterators.hxx  tmapset.hxx
astromap/src/coordsys/: Makefile.am  coordsys.cxx  coordsys.hxx  csfileio.cxx  csfileio.hxx  csops.cxx  csops.hxx  cssave.cxx  cssave.hxx  lincordsys.cxx  lincordsys.hxx
astromap/src/dataser/: .cvsignore  Makefile.am  datapoint.cxx  datapoint.hxx  dataseries.cxx  dataseries.hxx  dsfileops.cxx  dsfileops.hxx  dstomap.cxx  dstomap.hxx  mapdseval.cxx  mapdseval.hxx  mapdseval_flat.cxx  mapdseval_flat.hxx  mapdsutils.cxx  mapdsutils.hxx
astromap/src/wcs/: Makefile.am  cel.c  cel.h  cylfix.c  cylfix.h  lin.c  lin.h  prj.c  prj.h  spc.c  spc.h  sph.c  sph.h  spx.c  spx.h  tab.c  tab.h  wcs.c  wcs.h  wcshdr.c  wcshdr.h  wcsmath.h  wcspih.c  wcspih.l  wcstrig.c  wcstrig.h
astromap/test/: Makefile.am  t_units.cpp
bnfits/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  bnfits.pc.in  configure.ac
bnfits/pybind/: .cvsignore  Makefile.am  configure.ac  pybnfits.i
bnfits/src/: Makefile.am  bnfits_fwd.hxx  fitserr.cxx  fitserr.hxx  fitsops.cxx  fitsops.hxx  fitswrap.cxx  fitswrap.hxx  tfitsops.hxx
bnlib/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  acinclude.m4  bnlib.pc.in  configure.ac
bnlib/cbind/: .cvsignore  Makefile.am  cbnlib.c  cbnlib.cxx  cbnlib.h
bnlib/doc/: Doxyfile  Doxyfile.in  Kolmog.doc  Kolmog.doxy.in
bnlib/pybind/: .cvsignore  Makefile.am  README  acinclude.m4  configure.ac  pybnlib.i
bnlib/pybind/test/: gridmagnification.py  k3d_structretest.py  kernels3d.py  kolmogorov.py  kolmogorov3d.py  kolmogorovsfns.py  setup.py  test_k3changes.py  test_structure.py  threedimcorners.py  threedimturbulence.py
bnlib/src/: Makefile.am  binaryfn.hxx  bndebug.hxx  bnlib_main.cxx  bnlib_main.hxx  bnrandom.cxx  bnrandom.hxx  gaussian.cxx  gaussian.hxx  gsl_utils.cxx  gsl_utils.hxx  integrate.cxx  integrate.hxx  integrateutils.cxx  integrateutils.hxx  interpolate.cxx  interpolate.hxx  interpolate_forwd.hxx  interpolategsl.cxx  interpolategsl.hxx  interpolatelog.cxx  interpolatelog.hxx  kernels_3d.cxx  kernels_3d.hxx  kolmogorov.cxx  kolmogorov.hxx  kolmogorov_3d.cxx  kolmogorov_3d.hxx  kolmogorov_3diters.cxx  kolmogorov_3diters.hxx  kolmogorov_3diters_edge.cxx  kolmogorov_3diters_edge.hxx  kolmogorov_3diters_face.cxx  kolmogorov_3diters_face.hxx  kolmogorov_3diters_t.hxx  kolmogorov_3dsfn.cxx  kolmogorov_3dsfn.hxx  kolmogorov_iters.cxx  kolmogorov_iters.hxx  kolmogorov_spec.cxx  (+26 more)
bnlib/src/kolmog/: Makefile.am  kernels_3d.hxx  kolmogorov.cxx  kolmogorov_3d.cxx  kolmogorov_3d.hxx  kolmogorov_3diters.cxx  kolmogorov_3diters.hxx  kolmogorov_3diters_edge.cxx  kolmogorov_3diters_edge.hxx  kolmogorov_3diters_face.cxx  kolmogorov_3diters_face.hxx  kolmogorov_3diters_t.hxx  kolmogorov_3dsfn.cxx  kolmogorov_3dsfn.hxx  kolmogorov_iters.cxx  kolmogorov_iters.hxx  kolmogorov_spec.cxx  kolmogorov_spec.hxx  kolmogorov_wrap.cxx  kolmogorov_wrap.hxx
bnlib/test/: Makefile.am  kvolume.cpp
bnlib/test/perf/: REDME  kolmogorov3d.cxx
bnmin1/: CMakeLists.txt  COPYING  ChangeLog  Makefile.am  NEWS  README  TODO  acinclude.m4  bnmin1.pc.in  configure.ac
bnmin1/doc/: Doxyfile.in
bnmin1/pybind/: .cvsignore  Makefile.am  README  acinclude.m4  configure.ac  pybnmin1.i
bnmin1/pybind/config/: swig.am
bnmin1/pybind/test/: ellipsoidtests.py  setup.py  t1.py  t_minim.py
bnmin1/src/: .cvsignore  CMakeLists.txt  Makefile.am  bnmin_main.cxx  bnmin_main.hxx  gradientminim.cxx  gradientminim.hxx  gradientmodel.cxx  gradientmodel.hxx  linemodel.cxx  linemodel.hxx  lmmin.cxx  lmmin.hxx  lmminutils.cxx  lmminutils.hxx  markovchain.cxx  markovchain.hxx  mcmonitor.cxx  mcmonitor.hxx  mcpoint.cxx  mcpoint.hxx  metro_propose.cxx  metro_propose.hxx  metropolis.cxx  metropolis.hxx  minim.cxx  minim.hxx  minimio.cxx  minimio.hxx  minimmodel.cxx  minimmodel.hxx  monitor.cxx  monitor.hxx  nestederr.cxx  nestederr.hxx  nestedinitial.cxx  nestedinitial.hxx  nestedsampler.cxx  nestedsampler.hxx  paramalgo.cxx  (+15 more)
bnmin1/src/apps/: bayesline.cxx  bayesline.hxx  gaussmodel.cpp  gaussmodel.cxx  gaussmodel.hpp  gaussmodel.hxx  gen1dfit.cxx  gen1dfit.hxx
bnmin1/src/f77/: .cvsignore  Makefile.am
bnmin1/src/sets/: ellipsoids.cxx  ellipsoids.hxx  ellipsoids_sample.cxx  ellipsoids_sample.hxx  spheres.cxx  spheres.hxx
bnmin1/test/: Makefile.am  gaussmodel.hpp  nestedgauss.cpp  nestedgauss.hpp  quadmodel.hpp  t_minim.cpp  t_sets.cpp  t_unit.cpp  t_utils.cpp
oof/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  acinclude.m4  configure.ac
oof/doc/: Doxyfile.in
oof/pybind/: .cvsignore  AUTHORS  Makefile.am  configure.ac  pyoof.i  swig.am
oof/src/: .cvsignore  Makefile.am  directcompare.cxx  directcompare.hxx  maptoresidual.cxx  maptoresidual.hxx  maptoresidual_ds.cxx  maptoresidual_ds.hxx  obscompare.cxx  obscompare.hxx  obsdefocus.cxx  obsdefocus.hxx  obsfilefns.cxx  obsfilefns.hxx  obsphasescreen.cxx  obsphasescreen.hxx  oof_err.cxx  oof_err.hxx  oof_main.cxx  oof_main.hxx
oof/test/: Makefile.am  t_units.cpp
(+136 files in other folders)
