AC_PREREQ(2.59)

AC_COPYRIGHT(Bojan Nikolic)
AC_REVISION($Id: configure.ac,v 1.1 2006/03/28 23:29:36 bnikolic Exp $)

AC_INIT([pybnfits] , [0.01])

AC_CONFIG_AUX_DIR(config)

AM_INIT_AUTOMAKE()

AC_DISABLE_STATIC
AC_PROG_LIBTOOL


AC_PROG_CC
AC_PROG_CXX

AM_PATH_PYTHON(2.3)

AM_CHECK_PYTHON_HEADERS()
AC_PATH_PROGS([SWIG],[swig])

AC_OUTPUT(Makefile)


