
lib_LTLIBRARIES = libbnfits.la 

libbnfits_la_SOURCES= fitswrap.hxx fitswrap.cxx \
			fitserr.hxx fitserr.cxx \
			fitsops.hxx fitsops.cxx \
			tfitsops.hxx

libbnfits_la_CFLAGS = -Wall
libbnfits_la_CPPFLAGS = -Wall

libbnfits_la_LIBADD = -lcfitsio

include_HEADERS =      fitswrap.hxx fitserr.hxx fitsops.hxx \
			tfitsops.hxx

