 
lib_LTLIBRARIES = libbnlib.la 

libbnlib_la_SOURCES= interpolate.hxx interpolate.cxx \
			unaryfn.hxx \
	     		interpolategsl.hxx interpolategsl.cxx \
			integrate.cxx integrate.hxx \
			phyconstants.hxx phyconstants.cxx \
			phyfunc.hxx phyfunc.cxx\
			phycosmo.cxx phycosmo.hxx \
			linraster.hxx linraster.cxx \
			onedmin.hxx onedmin.cxx \
			onedroot.cxx onedroot.hxx	 \
			oneddiff.cxx oneddiff.hxx \
			bndebug.hxx \
			bnrandom.hxx bnrandom.cxx \
			binaryfn.hxx \
			zernikepoly.hxx zernikepoly.cxx \
			gaussian.cxx gaussian.hxx \
			gsl_utils.cxx gsl_utils.hxx \
			interpolatelog.cxx interpolatelog.hxx \
			tophat.cxx tophat.hxx \
			integrateutils.cxx integrateutils.hxx\
			unaryfnutils.cxx unaryfnutils.hxx\
			kolmogorov.cxx kolmogorov.hxx \
			kolmogorov_iters.cxx kolmogorov_iters.hxx \
			kolmogorov_wrap.cxx kolmogorov_wrap.hxx \
			kolmogorov_spec.cxx kolmogorov_spec.hxx \
			kolmogorov_3diters.cxx kolmogorov_3diters.hxx\
			kolmogorov_3d.cxx kolmogorov_3d.hxx \
			kernels_3d.cxx kernels_3d.hxx \
			kolmogorov_3diters_t.hxx \
			quadratic_bfn.cxx quadratic_bfn.hxx \
			kolmogorov_3diters_face.cxx kolmogorov_3diters_face.hxx \
			kolmogorov_3diters_edge.cxx kolmogorov_3diters_edge.hxx \
			kolmogorov_3dsfn.cxx kolmogorov_3dsfn.hxx

libbnlib_la_CFLAGS = -Wall
libbnlib_la_CPPFLAGS = -Wall

libbnlib_la_LIBADD = -lgsl -lgslcblas

include_HEADERS = 	unaryfn.hxx \
			interpolate.hxx \
			interpolate_forwd.hxx \
			interpolategsl.hxx \
			integrate.hxx\
			phyconstants.hxx\
			phyfunc.hxx \
			phycosmo.hxx \
			linraster.hxx \
			onedmin.hxx \
			oneddiff.hxx \
			onedroot.hxx \
			bndebug.hxx \
			bnrandom.hxx \
			binaryfn.hxx	\
			zernikepoly.hxx \
			gaussian.hxx \
			gsl_utils.hxx \
			interpolatelog.hxx\
			tophat.hxx\
			integrateutils.hxx\
			unaryfnutils.hxx \
			kolmogorov.hxx\
			kolmogorov_iters.hxx \
			kolmogorov_spec.hxx \
			kolmogorov_wrap.hxx \
			kolmogorov_3diters.hxx \
			kolmogorov_3d.hxx \
			kernels_3d.hxx \
			quadratic_bfn.hxx
