
AC_PREREQ(2.59)

AC_COPYRIGHT(Bojan Nikolic)
AC_REVISION($Id: configure.ac,v 1.2 2005/09/18 17:05:00 bnikolic Exp $)

AC_INIT([pybnmin1] , [1.0])

AC_CONFIG_AUX_DIR(config)

AM_INIT_AUTOMAKE()

AC_DISABLE_STATIC
AC_PROG_LIBTOOL


AC_PROG_CC
AC_PROG_CXX

AM_PATH_PYTHON(2.4)

AC_PYTHON_DEVEL()

AC_PROG_SWIG(1.3.31)

AC_LANG_PUSH(C++)
AX_BOOST_BASE([1.34.0])
AC_LANG_POP(C++)

AC_OUTPUT(Makefile)


