AC_PREREQ(2.59)

AC_COPYRIGHT(Bojan Nikolic)
AC_REVISION($Id: configure.ac,v 1.2 2005/08/31 16:47:33 bnikolic Exp $)

AC_INIT([pyoof] , [0.01])

AC_CONFIG_AUX_DIR(config)

AM_INIT_AUTOMAKE()

AC_DISABLE_STATIC
AC_PROG_LIBTOOL


AC_PROG_CC
AC_PROG_CXX

AM_PATH_PYTHON(2.4)

AM_CHECK_PYTHON_HEADERS()

AC_PATH_PROGS([SWIG],[swig])
AC_SUBST(SWIGFLAGS)

PKG_CHECK_MODULES([BN], [bnlib >= 1.2 bnmin1 >= 1.2 astromap >= 1.2 bnfits >= 1.2])

AC_OUTPUT(Makefile)


