

lib_LTLIBRARIES = libcoordsys.la 

libcoordsys_la_SOURCES= coordsys.cxx coordsys.hxx \
			lincordsys.hxx lincordsys.cxx \
			csops.hxx csops.cxx


libcoordsys_la_CFLAGS = -Wall
libcoordsys_la_CPPFLAGS = -Wall

libcoordsys_la_LIBADD = 

include_HEADERS = 	coordsys.hxx lincordsys.hxx \
			csops.hxx
