
lib_LTLIBRARIES = libwcsstd.la 

libwcsstd_la_SOURCES= cel.h cel.c \
			cylfix.h cylfix.c \
			lin.h lin.c \
			prj.h prj.c \
			spc.h spc.c \
			sph.h sph.c \
			spx.h spx.c \
			tab.h tab.c \
			wcs.h wcs.c \
			wcshdr.h wcshdr.c \
			wcsmath.h \
			wcspih.c \
			wcstrig.h wcstrig.c

libwcsstd_la_CFLAGS = -Wall

libwcsstd_la_LIBADD = 

include_HEADERS =      
