lib_LTLIBRARIES = libbnlibkolmog.la 

libbnlibkolmog_la_SOURCES= kernels_3d.cxx kernels_3d.hxx kolmogorov_3d.cxx kolmogorov_3d.hxx kolmogorov_3diters.cxx kolmogorov_3diters_edge.cxx kolmogorov_3diters_edge.hxx kolmogorov_3diters_face.cxx kolmogorov_3diters_face.hxx kolmogorov_3diters.hxx kolmogorov_3diters_t.hxx kolmogorov_3dsfn.cxx kolmogorov_3dsfn.hxx kolmogorov.cxx kolmogorov.hxx kolmogorov_iters.cxx kolmogorov_iters.hxx kolmogorov_spec.cxx kolmogorov_spec.hxx kolmogorov_wrap.cxx kolmogorov_wrap.hxx

libbnlibkolmog_la_CFLAGS = -Wall
libbnlibkolmog_la_CPPFLAGS = -Wall

libbnlibkolmog_la_LIBADD = 

include_HEADERS = 	
