

lib_LTLIBRARIES = liboofaperture.la 

liboofaperture_la_SOURCES = amplimod.cxx amplimod.hxx \
				aperturemod.cxx aperturemod.hxx \
				phasemod.cxx phasemod.hxx \
				zernmodel.hxx zernmodel.cxx \
				gaussampmod.hxx gaussampmod.cxx

liboofaperture_la_CFLAGS = -Wall
liboofaperture_la_CPPFLAGS = -Wall 

liboofaperture_la_LIBADD = -lastromap 

