

lib_LTLIBRARIES = liboofaperture.la 

liboofaperture_la_SOURCES = amplimod.cxx amplimod.hxx \
				aperturemod.cxx aperturemod.hxx \
				phasemod.cxx phasemod.hxx \
				zernmodel.hxx zernmodel.cxx \
				gaussampmod.hxx gaussampmod.cxx \
				mkapertures.cxx mkapertures.hxx \
				tophatmodel.cxx tophatmodel.hxx

liboofaperture_la_CFLAGS = -Wall   ${BN_CFLAGS}
liboofaperture_la_CPPFLAGS = -Wall ${BN_CFLAGS}


